Added cursor "hand" state on hover over an inbox item

--- a/sass/px-inbox-sketch.scss
+++ b/sass/px-inbox-sketch.scss
@@ -57,6 +57,11 @@ $inuit-enable-input--tiny: true;
 .info {
   text-align: right;
 }
+.list-ui__item {
+  &:hover {
+    cursor: pointer;
+  }
+}
 .list-ui__item.selected {
   background-color: $select-blue-default;
   color: white;
