--- a/sass/px-inbox-sketch.scss
+++ b/sass/px-inbox-sketch.scss
@@ -35,6 +35,7 @@ $inuit-enable-input--tiny: true;
 
 
 @import "px-list-ui-design/_objects.list-ui.scss";
+@import "px-input-group-design/_objects.input-group.scss";
 
 
 
@@ -69,6 +70,29 @@ px-dropdown {
 }
 .svg-canvas {
     display: none;
+}
+.search-field {
+  position: relative;
+}
+.search-field .text-input {
+  padding-right: 2rem;
+}
+.search-icon {
+  position: absolute;
+  right: 0.3333rem;
+  height: 1rem;
+  width: 1rem;
+}
+.sort-dropdown {
+  min-width: 5rem;
+  --px-dropdown-bg-color--default: transparent;
+  --px-dropdown-bg-color--hover: transparent;
+  --px-dropdown-bg-color--disabled: transparent;
+  --px-dropdown-bg-color--opened: transparent;
+  --px-dropdown-border-color: transparent;
+}
+.sort-dropdown-content {
+  font-weight: normal;
 }
 
 // Trumps
