forced default selection, updated demo per design feedback

--- a/sass/px-inbox-sketch.scss
+++ b/sass/px-inbox-sketch.scss
@@ -33,7 +33,7 @@ $inuit-enable-input--tiny: true;
 @import "px-forms-design/_base.forms.scss";
 
 
-
+$inuit-enable-list-ui--small: true;
 @import "px-list-ui-design/_objects.list-ui.scss";
 @import "px-input-group-design/_objects.input-group.scss";
 
