--- a/sass/px-inbox.scss
+++ b/sass/px-inbox.scss
@@ -9,7 +9,6 @@
  */
 
 // Settings
-@import "px-colors-design/_settings.colors.scss";
 
 // Generic
 @import "px-normalize-design/_generic.normalize.scss";
@@ -37,7 +36,7 @@ $inuit-list-ui-border-color: transparent;
   height: 100%;
   flex-basis: var(--px-inbox-list-width, 320px);
   border-right: 1px solid var(--px-inbox-border-color, transparent);
-  background-color: var(--px-inbox-li-background-color, $gray1);
+  background-color: var(--px-inbox-li-background-color, white);
 }
 .list__header {
   flex: 0 0 auto;
@@ -49,13 +48,13 @@ $inuit-list-ui-border-color: transparent;
   height: calculateRem(80px);
   padding-left: $inuit-base-spacing-unit;
   padding-right: $inuit-base-spacing-unit;
-  border-bottom-color: var(--px-inbox-border-color, $gray3);
+  border-bottom-color: var(--px-inbox-border-color, gray);
 }
 .list-ui--small .list-ui__item.selected {
-  background-color: var(--px-inbox-li-background-color--selected, $select-default);
-  color: var(--px-inbox-li-text-color--selected, $white);
+  background-color: var(--px-inbox-li-background-color--selected, blue);
+  color: var(--px-inbox-li-text-color--selected, white);
   .subtitle, .info {
-    color: var(--px-inbox-li-text-color--selected, $white);
+    color: var(--px-inbox-li-text-color--selected, white);
   }
 }
 .title {
@@ -78,12 +77,12 @@ $inuit-list-ui-border-color: transparent;
   word-break: break-word;
   line-height: $inuit-base-spacing-unit--large;
   max-height: $inuit-base-spacing-unit--large;
-  color: var(--px-inbox-secondary-text-color, $gray10);
+  color: var(--px-inbox-secondary-text-color, darkgray);
 }
 .info {
   text-align: right;
   margin-left: 2rem;
-  color: var(--px-inbox-secondary-text-color, $gray10);
+  color: var(--px-inbox-secondary-text-color, darkgray);
 }
 px-dropdown {
   margin-top: -2px;
@@ -94,7 +93,7 @@ px-dropdown {
   flex: 1 1 auto;
 }
 .label {
-  color: var(--px-inbox-secondary-text-color, $gray10);
+  color: var(--px-inbox-secondary-text-color, darkgray);
 }
 .svg-canvas {
     display: none;
@@ -106,30 +105,28 @@ px-dropdown {
 }
 #icon {
   position: relative;
-  height:  1rem;
-  width:  1rem;
-  min-width: 1rem;
-  margin-top: 2px;
+  height:  1.5rem;
+  width:  1.5rem;
+  min-width: 1.5rem;
   margin-right: 5px;
-  font-size: 10px;
+  font-size: 14px;
   line-height: 1rem;
   font-weight: bold;
-  color: var(--px-inbox-icon-outline-color, $white);
-  border: 1px solid var(--px-inbox-icon-outline-color, $white);
+  color: var(--px-inbox-icon-outline-color, white);
+  border: 1px solid var(--px-inbox-icon-outline-color, white);
   &.important {
     .svg-triangle {
-      fill: var(--px-inbox-alert-color, $status-red3);
-      stroke: var(--px-inbox-icon-outline-color, $white);
-      margin: 0.1rem auto;
-      width: 1rem;
-      height: 1rem;
+      fill: var(--px-inbox-alert-color, red);
+      stroke: var(--px-inbox-icon-outline-color, white);
+      width: 1.5rem;
+      height: 1.5rem;
     }
     border: none;
     span:before {
       content: '1';
       position: absolute;
-      top: 3px;
-      left: 5px;
+      top: 6px;
+      left: 8px;
     }
     .svg-canvas {
       display: block !important;
@@ -139,7 +136,7 @@ px-dropdown {
   }
   &.warning {
     margin-right: 0.4rem !important;
-    background-color: var(--px-inbox-warning-color, $status-orange3);
+    background-color: var(--px-inbox-warning-color, orange);
     transform: rotate(45deg);
     span {
       display: block;
@@ -148,27 +145,29 @@ px-dropdown {
     span:before {
       content: '2';
       position: absolute;
-      top: -3px;
+      height: 1.3333rem;
+      width: 1.3333rem;
+      top: -1px;
       left: 0px;
     }
   }
   &.error {
-    background-color: var(--px-inbox-error-color, $status-yellow3);
+    background-color: var(--px-inbox-error-color, gold);
     span:before {
       content: '3';
       position: absolute;
-      top: -1px;
-      left: 4px;
+      top: 2px;
+      left: 6px;
     }
   }
   &.information {
-    background-color: var(--px-inbox-information-color, $status-blue3);
+    background-color: var(--px-inbox-information-color, blue);
     border-radius: 1rem;
     span:before {
       content: '4';
       position: absolute;
-      top: -1px;
-      left: 4px;
+      top: 3px;
+      left: 7px;
     }
   }
 }
