--- a/sass/px-inbox.scss
+++ b/sass/px-inbox.scss
@@ -83,6 +83,7 @@ $inuit-list-ui-border-color: transparent;
   text-align: right;
   font-size: calculateRem(12px);
   margin-left: 2rem;
+  flex: 0 0 auto;
   color: var(--px-inbox-secondary-text-color, darkgray);
 }
 px-dropdown {
