--- a/sass/px-inbox.scss
+++ b/sass/px-inbox.scss
@@ -35,9 +35,15 @@ $inuit-list-ui-border-color: transparent;
 }
 .list {
   height: 100%;
-  flex-basis: var(--px-inbox-list-width, 320px);
+  flex: 0 0 var(--px-inbox-list-width, calculateRem(320px));
   border-right: 1px solid var(--px-inbox-border-color, transparent);
   background-color: var(--px-inbox-li-background-color, white);
+  &.constrained {
+    flex-basis: 100%;
+    &.detail-active {
+      display: none;
+    }
+  }
 }
 .list__header {
   flex: 0 0 auto;
@@ -110,6 +116,12 @@ px-dropdown {
   height: 100%;
   overflow-y: auto;
   flex: 1 1 auto;
+  &.list-active {
+    display: none;
+  }
+  &.constrained .back-link {
+    display: block;
+  }
 }
 .label {
   color: var(--px-inbox-secondary-text-color, darkgray);
@@ -127,9 +139,13 @@ px-icon#sortIcon {
   width: 1rem;
   height: 1rem;
 }
+.back-link {
+  display: none;
+}
 
 // Trumps
 $inuit-enable-margins: true;
 $inuit-enable-margins--tiny: true;
 $inuit-enable-margins--small: true;
+$inuit-enable-paddings: true;
 @import "px-spacing-design/_trumps.spacing.scss";
